tests/ui/issues/issue-9814.stderr
error[E0614]: type `Foo` cannot be dereferenced
  --> $DIR/issue-9814.rs:7:13
   |
LL |     let _ = *Foo::Bar(2);
   |             ^^^^^^^^^^^^ can't be dereferenced

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0614`.
